# Gym_managment

./: Cargo.toml  README.md  postman_collection.json
src/: main.rs  mydb.db
src/controllers/: class_controller.rs  enrollment_controller.rs  member_controller.rs  membership_controller.rs  mod.rs  trainer_controller.rs
src/models/: class.rs  enrollment.rs  member.rs  membership.rs  mod.rs  trainer.rs
src/routes/: classes.rs  enrollments.rs  members.rs  membership.rs  mod.rs  trainers.rs
